# jaem-server

./: .gitignore  Cargo.toml  docker-compose.yaml  testconfig.toml
jaem_config/: Cargo.toml
jaem_config/src/: lib.rs  main.rs
jaem_message-delivery/: Cargo.toml  README.md
jaem_message-delivery/src/: authentication.rs  lib.rs  main.rs  message_deletion.rs  request_handling.rs  response_body.rs  share_link.rs  sign_algos.rs
jaem_message-delivery/tests/: deleting_messages.rs  receiving_messages.rs  request_handling.rs  retrieving_messages.rs  sharing_data.rs
jaem_user-discovery/: .gitignore  Cargo.toml  README.md  temp_users.json
jaem_user-discovery/src/: handle_connection.rs  lib.rs  main.rs  user_data.rs
jaem_user-discovery/tests/: api_tests.rs  temp_users.json  test_users.json
