[package]
name = "jaem_message-delivery"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = [ "server", "http1" ] }
tokio = { version = "1", features = [ "net", "rt-multi-thread", "macros" ] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
strum = "0.27"
strum_macros = "0.27"
