[package]
name = "jaem_user-discovery"
version = "0.0.1"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
json = "0.12"
serde = {version= "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
ctor = "0.3.6"
multipart = "0.18.0"
